<resources>
    <string name="app_name">Vidaurre J. C.</string>

    <!-- Strings related to login -->
    <string name="server">https://constructoravjc.herokuapp.com/</string>
    <string name="userdata">personal/restpersonal/currentuser/</string>
    <string name="useritem">seguimiento/restseguimiento/currentitemuser/</string>
    <string name="senditem">seguimiento/restseguimiento/currentreporte/</string>
    <string name="sendfotos">seguimiento/restseguimiento/currentreportefotos/</string>
    <string name="getmateriales">almacen/restalmacen/materiales/</string>
    <string name="reqmaterial">seguimiento/restseguimiento/peticionmaterial/</string>
    <string name="getinsumos">almacen/restalmacen/insumos/</string>
    <string name="reqinsumos">seguimiento/restseguimiento/peticioninsumo/</string>
    <string name="getsalidainsumos">almacen/restalmacen/salidainsumos/</string>
    <string name="getsalidamaterial">almacen/restalmacen/salidamaterial/</string>

    <string name="salir">Salir</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Logear</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="informes_item">Envio de Informes</string>
    <string name="lista_infomes_get">Lista de Informes</string>
    <string name="lista_envios_get">Requerimientos de material/insumos</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="buscar">Buscar</string>
    <string name="req_materiales">Requerimiento de Materiales</string>
    <string name="req_insumos">Requerimiento de Insumos</string>
    <string name="confirmacion_de_insumos">Confirmacion de Insumos</string>
    <string name="confirmacion_de_materiales">confirmacion de materiales</string>
    <string-array name="listitem">
        <item>Todo</item>
        <item>Nombre de Proyecto</item>
        <item>Descripcion Item</item>
    </string-array>
</resources>
